--- a/boutique_page.html
+++ b/boutique_page.html
@@ -436,6 +436,11 @@
     </nav>
 </header>
 <main class="boutique_store_page">
+    <section class="section_photo">
+        <div class="container">
+            <div class="boutique_photo"></div>
+        </div>
+    </section>
     <section class="section_1">
         <div class="container">
             <div class="row">
