--- a/create_boutique_step_2.html
+++ b/create_boutique_step_2.html
@@ -274,13 +274,13 @@
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 col-md-12 col-sm-offset-0">
                     <div class="row">
-                        <div class="col-md-3 left_bar">
+                        <div class="col-sm-3 col-xs-4 left_bar">
                             <div class="menu_block">
                                 <div class="item active"><span>Profile</span> <i class="icon"></i></div>
                                 <div class="item"><span>Contact Details</span><i class="icon"></i></div>
                             </div>
                         </div>
-                        <div class="col-md-9 right_bar">
+                        <div class="col-sm-9 col-xs-8 right_bar">
                             <h2>Your Boutique's Profile</h2>
                             <h5>Introduce your boutique to our community</h5>
                             <div class="progress_block">
