--- a/reviews_empty.html
+++ b/reviews_empty.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Supply Apparel</title>
+    <title>Supply Apparel </title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -55,7 +55,7 @@
                         </ul>
                     </li>
                     <li class="icons"><a href="#"><span class="wishlist_icon" title="Wishlist"></span></a></li>
-                    <li class="icons"><a href="#"><span class="cart_icon" data-product="1" title="Cart"></span></a></li>
+                    <li class="icons"><a href="#"><span class="cart_icon" title="Cart"></span></a></li>
                 </ul>
             </div>
             <div class="collapse navbar-collapse" id="website_navbar_collapse">
@@ -80,7 +80,7 @@
                         </ul>
                     </li>
                     <li class="icons"><a href="#"><span class="wishlist_icon" title="Wishlist"></span></a></li>
-                    <li class="icons"><a href="#"><span class="cart_icon" data-product="1" title="Cart"></span></a></li>
+                    <li class="icons"><a href="#"><span class="cart_icon" title="Cart"></span></a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-left">
                     <li class="dropdown women_dropdown">
@@ -177,7 +177,7 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="dropdown boutiques_dropdown">
+                    <li class="dropdown boutiques_dropdown active">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
                            aria-haspopup="true" aria-expanded="false">Boutiques</a>
                         <ul class="dropdown-menu">
@@ -268,81 +268,94 @@
         </div>
     </nav>
 </header>
-<main class="owner_create_step_4">
-    <section class="section_1">
+<main class="boutique_empty_page">
+    <section class="section_1 owner_menu">
         <div class="container">
             <div class="row">
-                <div class="col-lg-10 col-lg-offset-1 col-md-12 col-sm-offset-0">
-                    <div class="row">
-                        <h2>Membership Packages</h2>
-                        <h5>You're almost there! Select the package that best suits you setup your boutique</h5>
-                        <div class="col-md-4 col-sm-6 col-xs-6 item">
-                            <div class="item_block">
-                                <div class="item_header free">
-                                    Free
-                                </div>
-                                <div class="item_body">
-                                    <div class="plan_features">
-                                        Unlimited products
-                                    </div>
-                                    <div class="plan_features">
-                                        1 look book
-                                    </div>
-                                    <div class="plan_features">
-                                        9am - 6pm customer support
-                                    </div>
-                                    <div class="plan_features">
-                                        <span>20% commission per purchase</span>
-                                        <a href="owner_boutique_page_empty.html" class="btn-select">Select</a>
-                                    </div>
+                <div class="col-lg-10 col-lg-offset-1 col-md-12 col-md-offset-0">
+                    <ul class="list-inline account_menu">
+                        <li>
+                            <div class="icon"></div>
+                        </li>
+                        <li class="active"><a href="#"><i class="boutique"></i><span>Boutique</span></a></li>
+                        <li><a href="#"><i class="orders"></i><span>Orders</span></a></li>
+                        <li><a href="#"><i class="messages"></i><span>Messages</span></a></li>
+                        <li><a href="#"><i class="settings"></i><span>Settings</span></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="section_photo">
+        <div class="container">
+            <div class="boutique_photo"></div>
+        </div>
+    </section>
+    <section class="section_2">
+        <div class="container">
+            <div class="row">
+                <h2>Bangkok TShirts</h2>
+                <h5>Bangkok TShirts is a luxury retail chain of high quality tshirts that are available to be purchased
+                    anywhere around the world <br/>
+                    The brand has won many awards and is one of the premier apparel brands in the world.</h5>
+            </div>
+            <div class="row">
+                <div class="social_block">
+                    <a href="#" class="social insta"></a>
+                    <a href="#" class="social fb"></a>
+                    <a href="#" class="social tw"></a>
+                    <a href="#" class="social pt"></a>
+                </div>
+                <div class="followers_number">0 Followers</div>
+            </div>
+            <div class="row">
+                <ul class="nav nav-tabs boutique_tabs" role="tablist">
+                    <li role="presentation" class="active">
+                        <a href="#products_tab" aria-controls="products" role="tab"
+                           data-toggle="tab">Products</a>
+                    </li>
+                    <li role="presentation">
+                        <a href="#look_books" aria-controls="look" role="tab" data-toggle="tab">Look Books</a>
+                    </li>
+                    <li role="presentation">
+                        <a href="#blog_tab" aria-controls="blog" role="tab"
+                           data-toggle="tab">Blog</a>
+                    </li>
+                    <li role="presentation">
+                        <a href="#review_tab" aria-controls="review" role="tab"
+                           data-toggle="tab">Reviews</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="row">
+                <div class="col-lg-10 col-lg-offset-1 col-md-12 col-md-offset-0">
+                    <div class="tab-content">
+                        <div role="tabpanel" class="tab-pane active" id="products_tab">
+                            <h4>Starting by adding apparel to your collection</h4>
+                            <div class="row">
+                                <div class="single item empty col-md-3 col-sm-4 col-xs-6">
+                                    <div class="add_item"></div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-4 col-sm-6 col-xs-6 item">
-                            <div class="item_block">
-                                <div class="item_header">
-                                    <h3>$10</h3>
-                                    <p>per month</p>
-                                </div>
-                                <div class="item_body">
-                                    <div class="plan_features">
-                                        Unlimited products
-                                    </div>
-                                    <div class="plan_features">
-                                        3 look books
-                                    </div>
-                                    <div class="plan_features">
-                                        24 x 7 customer support
-                                    </div>
-                                    <div class="plan_features">
-                                        <span>15% commission per purchase</span>
-                                        <a href="#" class="btn-select">Select</a>
-                                    </div>
+                        <div role="tabpanel" class="tab-pane" id="look_books">
+                            <h4>Upload your Look Books for potential buyers to browse through</h4>
+                            <div class="row">
+                                <div class="single item empty col-md-3 col-sm-4 col-xs-6">
+                                    <div class="add_item"></div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-4 col-sm-6 col-xs-6 item">
-                            <div class="item_block">
-                                <div class="item_header">
-                                    <h3>$30</h3>
-                                    <p>per month</p>
-                                </div>
-                                <div class="item_body">
-                                    <div class="plan_features">
-                                        Unlimited products
-                                    </div>
-                                    <div class="plan_features">
-                                        Unlimited look books
-                                    </div>
-                                    <div class="plan_features">
-                                        24 x 7 customer support
-                                    </div>
-                                    <div class="plan_features">
-                                        <span>0% commission per purchase</span>
-                                        <a href="#" class="btn-select">Select</a>
-                                    </div>
+                        <div role="tabpanel" class="tab-pane" id="blog_tab">
+                            <h4>Make a style statement with your outlook on fashion</h4>
+                            <div class="row">
+                                <div class="item single empty col-md-3 col-sm-4 col-xs-6">
+                                    <div class="add_item"><span></span></div>
                                 </div>
                             </div>
+                        </div>
+                        <div role="tabpanel" class="tab-pane" id="review_tab">
+                            <h4>Read and respond to review from buyers</h4>
                         </div>
                     </div>
                 </div>
